# SQL_integration

./: manage.py  pyproject.toml  readme.md  requirements.txt
sql/: apps.py  forms.py  models.py  urls.py  views.py
sql/migrations/: 0001_initial.py  0002_rename_content_dataentry_sql_statement.py
sql/templates/: query_result.html
sql_integration/: asgi.py  settings.py  urls.py  wsgi.py
