[tool.poetry]
name = "sql-integration"
version = "0.1.0"
description = "this is an app meant to integrate sql"
authors = ["liu yuenfu"]
readme = "README.md"
packages = [{include = "sql_integration"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
black = "^23.7.0"
pandas = "^2.0.3"
pyodbc = "^4.0.39"
pypyodbc = "^1.3.6"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.7"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
